First draft of Matrix DSL